Version 1.3
===========

Schema changes
--------------

 * Schema has been documented using ietf.org draft 4 specifications
 http://tools.ietf.org/html/draft-fge-json-schema-validation-00

Enumeration changes
-------------------

  * Renamed Sabotage to Destruction in action.physical.variety
  * Renamed Embezzlement to Possession abuse in action.misuse.variety
  * Added Digital certificate to attribute.confidentiality.data.variety
  * Added S - Unknown to asset.variety
  * Added Virtual currency to attribute.confidentiality.data.variety
  * Added Source code to attribute.confidentiality.data.variety
  * Renamed Misappropriation to Repurpose
  * Added Defacement to attribute.integrity.variety
  * Added Pass-the-hash to hacking.variety
  * Added Secondary to actor.motive

Version 1.2
===========

Schema changes
--------------
  * Removed investigation date completely
  * Added field for target section, called "targeted" (not required)
  * Replaced "personal" boolean with "ownership" field for enumeration 
listing
  * Changed "management" boolean into enumeration listing
  * Changed "hosting" boolean into enumeration listing
  * Added field "accessibility" for enumeration listing, for where the 
asset is in the network (internal facing or internet facing, etc), 
will not be associated on a per asset basis.
  * Changed "asset" to be required
  * Make attribute section not required (near miss, false alarms, etc)
  * Change "security_compromise" to "security_incident" to make it more
clear what this variable tracks. This essentially asks "Was this 
event a security incident (defined as an event in which a security 
attribute (C/P, I/A, A/U) of an asset was compromised).

Enumeration changes
-------------------
  * Removed "No" from 'security_incident' (formerly security_compromise),
and add options of "False positive" and "Near miss" *Need feedback
  * Added in enumeration for targeted with values of "Unknown", "NA", 
"Opportunistic", "Targeted"