@@ -22,7 +22,7 @@
         {}
       ],
       "cloud": "Other",
-      "country": "US",
+      "country": ["US"],
       "hosting": "External",
       "management": "External",
       "notes": "test string",
