@@ -19,7 +19,7 @@
     "asset": {
       "accessibility": "Unknown",
       "cloud": "Other",
-      "country": "US",
+      "country": ["US"],
       "hosting": "External",
       "management": "External",
       "notes": "test string",
