@@ -381,7 +381,9 @@
           "type": "string"
         },
         "country": {
-          "type": "string"
+          "minItems": 1,
+          "type": "array",
+          "uniqueItems": true
         },
         "hosting": {
           "type": "string"
